feat: add gallery section

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Mesto</title>
   <link rel="stylesheet" href="./vendor/normalize.css">
   <link rel="stylesheet" href="./fonts/Inter/inter.css">
   <link rel="stylesheet" href="./style.css">
@@ -39,45 +39,45 @@
     </section>
     <section class="gallery">
       <div class="gallery__card">
-        <img src="#" alt="#" class="gallery__picture">
+        <img src="./images/karachaevsk.jpg" alt="Фото из галлереи" class="gallery__picture">
         <div class="gallery__card-container">
-          <p class="gallery__caption"></p>
-          <button class="gallery__like">Л</button>
+          <p class="gallery__caption">Карачаевск</p>
+          <span class="gallery__like gallery__like_active"></span>
         </div>
       </div>
       <div class="gallery__card">
-        <img src="#" alt="#" class="gallery__picture">
+        <img src="./images/elbrus.jpg" alt="Фото из галлереи" class="gallery__picture">
         <div class="gallery__card-container">
-          <p class="gallery__caption"></p>
-          <button class="gallery__like">Л</button>
+          <p class="gallery__caption">Гора Эльбрус</p>
+          <span class="gallery__like"></span>
         </div>
       </div>
       <div class="gallery__card">
-        <img src="#" alt="#" class="gallery__picture">
+        <img src="./images/dombay.jpg" alt="Фото из галлереи" class="gallery__picture">
         <div class="gallery__card-container">
-          <p class="gallery__caption"></p>
-          <button class="gallery__like">Л</button>
+          <p class="gallery__caption">Домбай</p>
+          <span class="gallery__like"></span>
         </div>
       </div>
       <div class="gallery__card">
-        <img src="#" alt="#" class="gallery__picture">
+        <img src="./images/elbrus.jpg" alt="Фото из галлереи" class="gallery__picture">
         <div class="gallery__card-container">
-          <p class="gallery__caption"></p>
-          <button class="gallery__like">Л</button>
+          <p class="gallery__caption">Гора Эльбрус</p>
+          <span class="gallery__like"></span>
         </div>
       </div>
       <div class="gallery__card">
-        <img src="#" alt="#" class="gallery__picture">
+        <img src="./images/dombay.jpg" alt="Фото из галлереи" class="gallery__picture">
         <div class="gallery__card-container">
-          <p class="gallery__caption"></p>
-          <button class="gallery__like">Л</button>
+          <p class="gallery__caption">Домбай</p>
+          <span class="gallery__like"></span>
         </div>
       </div>
       <div class="gallery__card">
-        <img src="#" alt="#" class="gallery__picture">
+        <img src="./images/karachaevsk.jpg" alt="Фото из галлереи" class="gallery__picture">
         <div class="gallery__card-container">
-          <p class="gallery__caption"></p>
-          <button class="gallery__like">Л</button>
+          <p class="gallery__caption">Карачаевск</p>
+          <span class="gallery__like"></span>
         </div>
       </div>
     </section>
