--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
       </div>
     </section>
     <footer class="footer">
-      <p class="footer__copyright"></p>
+      <p class="footer__copyright">&copy; 2020 Mesto Russia</p>
     </footer>
   </main>
 </body>
