fix: fix gallery

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <img src="./images/karachaevsk.jpg" alt="Фото из галлереи" class="gallery__picture">
         <div class="gallery__card-container">
           <p class="gallery__caption">Карачаевск</p>
-          <span class="gallery__like gallery__like_active"></span>
+          <span class="gallery__like"></span>
         </div>
       </div>
       <div class="gallery__card">
