feat: add popup

--- a/index.html
+++ b/index.html
@@ -85,6 +85,18 @@
       <p class="footer__copyright">&copy; 2020 Mesto Russia</p>
     </footer>
   </main>
+  <div class="popup">
+    <div class="popup__container">
+      <p class="popup__header">Редактировать профиль</p>
+      <fieldset class="input-container">
+        <input type="text" class="input input_name" placeholder="Имя">
+        <input type="text" class="input input_description" placeholder="О себе">
+        <button type="submit" class="submit">Сохранить</button>
+      </fieldset>
+      <span class="close"></span>
+    </div>
+  </div>
+  <script src="./script.js"></script>
 </body>
 
 </html>
