fix: change gallery markup

--- a/index.html
+++ b/index.html
@@ -38,48 +38,51 @@
       </button>
     </section>
     <section class="gallery">
-      <div class="gallery__card">
-        <img src="./images/karachaevsk.jpg" alt="Фото из галлереи" class="gallery__picture">
-        <div class="gallery__card-container">
-          <p class="gallery__caption">Карачаевск</p>
-          <span class="gallery__like"></span>
-        </div>
-      </div>
-      <div class="gallery__card">
-        <img src="./images/elbrus.jpg" alt="Фото из галлереи" class="gallery__picture">
-        <div class="gallery__card-container">
-          <p class="gallery__caption">Гора Эльбрус</p>
-          <span class="gallery__like"></span>
-        </div>
-      </div>
-      <div class="gallery__card">
-        <img src="./images/dombay.jpg" alt="Фото из галлереи" class="gallery__picture">
-        <div class="gallery__card-container">
-          <p class="gallery__caption">Домбай</p>
-          <span class="gallery__like"></span>
-        </div>
-      </div>
-      <div class="gallery__card">
-        <img src="./images/elbrus.jpg" alt="Фото из галлереи" class="gallery__picture">
-        <div class="gallery__card-container">
-          <p class="gallery__caption">Гора Эльбрус</p>
-          <span class="gallery__like"></span>
-        </div>
-      </div>
-      <div class="gallery__card">
-        <img src="./images/dombay.jpg" alt="Фото из галлереи" class="gallery__picture">
-        <div class="gallery__card-container">
-          <p class="gallery__caption">Домбай</p>
-          <span class="gallery__like"></span>
-        </div>
-      </div>
-      <div class="gallery__card">
-        <img src="./images/karachaevsk.jpg" alt="Фото из галлереи" class="gallery__picture">
-        <div class="gallery__card-container">
-          <p class="gallery__caption">Карачаевск</p>
-          <span class="gallery__like"></span>
-        </div>
-      </div>
+      <ul class="gallery__list">
+        <li class="gallery__card">
+          <img src="./images/karachaevsk.jpg" alt="Фото из галлереи" class="gallery__picture">
+          <div class="gallery__card-container">
+            <p class="gallery__caption">Карачаевск</p>
+            <span class="gallery__like"></span>
+          </div>
+        </li>
+        <li class="gallery__card">
+          <img src="./images/elbrus.jpg" alt="Фото из галлереи" class="gallery__picture">
+          <div class="gallery__card-container">
+            <p class="gallery__caption">Гора Эльбрус</p>
+            <span class="gallery__like"></span>
+          </div>
+        </li>
+        <li class="gallery__card">
+          <img src="./images/dombay.jpg" alt="Фото из галлереи" class="gallery__picture">
+          <div class="gallery__card-container">
+            <p class="gallery__caption">Домбай</p>
+            <span class="gallery__like"></span>
+          </div>
+        </li>
+        <li class="gallery__card">
+          <img src="./images/elbrus.jpg" alt="Фото из галлереи" class="gallery__picture">
+          <div class="gallery__card-container">
+            <p class="gallery__caption">Гора Эльбрус</p>
+            <span class="gallery__like"></span>
+          </div>
+        </li>
+        <li class="gallery__card">
+          <img src="./images/dombay.jpg" alt="Фото из галлереи" class="gallery__picture">
+          <div class="gallery__card-container">
+            <p class="gallery__caption">Домбай</p>
+            <span class="gallery__like"></span>
+          </div>
+        </li>
+        <li class="gallery__card">
+          <img src="./images/karachaevsk.jpg" alt="Фото из галлереи" class="gallery__picture">
+          <div class="gallery__card-container">
+            <p class="gallery__caption">Карачаевск</p>
+            <span class="gallery__like"></span>
+          </div>
+        </li>
+      </ul>
+
     </section>
     <footer class="footer">
       <p class="footer__copyright">&copy; 2020 Mesto Russia</p>
