--- a/index.html
+++ b/index.html
@@ -6,9 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Mesto</title>
-  <link rel="stylesheet" href="./vendor/normalize.css">
-  <link rel="stylesheet" href="./fonts/Inter/inter.css">
-  <link rel="stylesheet" href="./style.css">
+  <link rel="stylesheet" href="./pages/index.css">
 </head>
 
 <body class="page">
@@ -99,7 +97,7 @@
       <span class="close"></span>
     </div>
   </div>
-  <script src="./script.js"></script>
+  <script src="./pages/index.js"></script>
 </body>
 
 </html>
