--- a/index.html
+++ b/index.html
@@ -21,16 +21,12 @@
       <div class="profile__info">
         <h1 class="profile__name">Жак-Ив Кусто</h1>
         <button class="profile__edit">
-          <svg class="profile__pen" viewbox="0 0 10 10" fill="none" xmlns="http://www.w3.org/2000/svg">
-            <path d="M10 1.328 2.604 8.767 1.283 7.419 8.66 0 10 1.328ZM0 10l1.962-.588L.585 8.083 0 10Z" fill="#fff" />
-          </svg>
+          <img src="./images/pen.svg" alt="Редактирование" class="profile__pen">
         </button>
         <p class="profile__description">Исследователь океана</p>
       </div>
       <button class="profile__button">
-        <svg class="profile__plus" viewbox="0 0 22 22" fill="none" xmlns="http://www.w3.org/2000/svg">
-          <path d="M22 9.778h-9.778V0H9.778v9.778H0v2.444h9.778V22h2.444v-9.778H22V9.778Z" fill="#fff" />
-        </svg>
+        <img src="./images/plus.svg" alt="Знак плюса" class="profile__plus">
       </button>
     </section>
     <section class="gallery">
