fix: third review

--- a/index.html
+++ b/index.html
@@ -80,8 +80,8 @@
       <h3 class="popup__header">Редактировать профиль</h3>
       <form name="popup-form" class="popup__form">
         <fieldset class="popup__form-container">
-          <input type="text" class="popup__input popup__input_name" placeholder="Имя" name="name">
-          <input type="text" class="popup__input popup__input_description" placeholder="О себе" name="about">
+          <input type="text" class="popup__input popup__input_type_name" placeholder="Имя" name="name">
+          <input type="text" class="popup__input popup__input_type_description" placeholder="О себе" name="about">
           <button type="submit" class="popup__submit-button">Сохранить</button>
         </fieldset>
       </form>
