feat: add initial cards

--- a/index.html
+++ b/index.html
@@ -88,6 +88,15 @@
       <button type="button" class="popup__close-button" aria-label="Кнопка закрытия попапа"></button>
     </div>
   </div>
+  <template id="card-template">
+    <li class="gallery__card">
+      <img alt="Фото из галлереи" class="gallery__picture">
+      <div class="gallery__card-container">
+        <h2 class="gallery__caption"></h2>
+        <button type="button" class="gallery__like-button" aria-label="Кнопка лайка"></button>
+      </div>
+    </li>
+  </template>
   <script src="./scripts/index.js" defer></script>
 </body>
 
