feat: add delete button

--- a/index.html
+++ b/index.html
@@ -26,50 +26,7 @@
       <button type="button" class="profile__add-button" aria-label="Кнопка добавления фото в галлерею"></button>
     </section>
     <section class="gallery">
-      <ul class="gallery__grid">
-        <li class="gallery__card">
-          <img src="./images/karachaevsk.jpg" alt="Фото из галлереи" class="gallery__picture">
-          <div class="gallery__card-container">
-            <h2 class="gallery__caption">Карачаевск</h2>
-            <button type="button" class="gallery__like-button" aria-label="Кнопка лайка"></button>
-          </div>
-        </li>
-        <li class="gallery__card">
-          <img src="./images/elbrus.jpg" alt="Фото из галлереи" class="gallery__picture">
-          <div class="gallery__card-container">
-            <h2 class="gallery__caption">Гора Эльбрус</h2>
-            <button type="button" class="gallery__like-button" aria-label="Кнопка лайка"></button>
-          </div>
-        </li>
-        <li class="gallery__card">
-          <img src="./images/dombay.jpg" alt="Фото из галлереи" class="gallery__picture">
-          <div class="gallery__card-container">
-            <h2 class="gallery__caption">Домбай</h2>
-            <button type="button" class="gallery__like-button" aria-label="Кнопка лайка"></button>
-          </div>
-        </li>
-        <li class="gallery__card">
-          <img src="./images/elbrus.jpg" alt="Фото из галлереи" class="gallery__picture">
-          <div class="gallery__card-container">
-            <h2 class="gallery__caption">Гора Эльбрус</h2>
-            <button type="button" class="gallery__like-button" aria-label="Кнопка лайка"></button>
-          </div>
-        </li>
-        <li class="gallery__card">
-          <img src="./images/dombay.jpg" alt="Фото из галлереи" class="gallery__picture">
-          <div class="gallery__card-container">
-            <h2 class="gallery__caption">Домбай</h2>
-            <button type="button" class="gallery__like-button" aria-label="Кнопка лайка"></button>
-          </div>
-        </li>
-        <li class="gallery__card">
-          <img src="./images/karachaevsk.jpg" alt="Фото из галлереи" class="gallery__picture">
-          <div class="gallery__card-container">
-            <h2 class="gallery__caption">Карачаевск</h2>
-            <button type="button" class="gallery__like-button" aria-label="Кнопка лайка"></button>
-          </div>
-        </li>
-      </ul>
+      <ul class="gallery__grid"></ul>
     </section>
   </main>
   <footer class="footer">
@@ -94,6 +51,7 @@
       <div class="gallery__card-container">
         <h2 class="gallery__caption"></h2>
         <button type="button" class="gallery__like-button" aria-label="Кнопка лайка"></button>
+        <button class="gallery__delete-button"></button>
       </div>
     </li>
   </template>
