--- a/index.html
+++ b/index.html
@@ -32,13 +32,28 @@
   <footer class="footer">
     <p class="footer__copyright" lang="en">&copy; 2020 Mesto Russia</p>
   </footer>
-  <div class="popup">
+  <div class="popup popup_type_profile">
     <div class="popup__container">
       <h3 class="popup__header">Редактировать профиль</h3>
-      <form name="popup-form" class="popup__form">
+      <form name="popup-form" class="popup__form popup__form_type_profile">
         <fieldset class="popup__form-container">
           <input type="text" class="popup__input popup__input_type_name" placeholder="Имя" name="name">
           <input type="text" class="popup__input popup__input_type_description" placeholder="О себе" name="about">
+          <button type="submit" class="popup__submit-button">Сохранить</button>
+        </fieldset>
+      </form>
+      <button type="button" class="popup__close-button" aria-label="Кнопка закрытия попапа"></button>
+    </div>
+  </div>
+  <div class="popup popup_type_new-photo">
+    <div class="popup__container">
+      <h3 class="popup__header">Новое место</h3>
+      <form name="popup-form" class="popup__form popup__form_type_new-photo">
+        <fieldset class="popup__form-container">
+          <input type="text" class="popup__input popup__input_type_photo-title" placeholder="Название"
+            name="photo-title">
+          <input type="text" class="popup__input popup__input_type_photo-href" placeholder="Ссылка на картинку"
+            name="photo-href">
           <button type="submit" class="popup__submit-button">Сохранить</button>
         </fieldset>
       </form>
@@ -54,6 +69,13 @@
         <button class="gallery__delete-button"></button>
       </div>
     </li>
+  </template>
+  <template id="full-size-photo">
+    <div class="popup">
+      <div class="popup__container">
+        <img alt="Фото из галлереи" class="popup__image">
+      </div>
+    </div>
   </template>
   <script src="./scripts/index.js" defer></script>
 </body>
