feat: add popup transition

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
   </div>
   <div class="popup popup_dark popup_type_fz-photo">
     <div class="popup__photo-container">
-      <img src="./images/test_image.jpg" alt="Фото из галлереи" class="popup__image">
+      <img alt="Фото из галлереи" class="popup__image">
       <p class="popup__caption"></p>
       <button type="button" class="popup__close-button" aria-label="Кнопка закрытия попапа"></button>
     </div>
