feat: add popup closing using overlay and keydown

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <fieldset class="popup__form-container">
           <input type="text" class="popup__input popup__input_type_name" placeholder="Имя" name="name">
           <input type="text" class="popup__input popup__input_type_description" placeholder="О себе" name="about">
-          <button type="submit" class="popup__submit-button">Сохранить</button>
+          <button type="submit" class="popup__submit-button popup__submit-button_disabled">Сохранить</button>
         </fieldset>
       </form>
       <button type="button" class="popup__close-button" aria-label="Кнопка закрытия попапа"></button>
@@ -78,6 +78,7 @@
     </li>
   </template>
   <script src="./scripts/index.js" defer></script>
+  <script src="./scripts/validate.js" defer></script>
 </body>
 
 </html>
