--- a/index.html
+++ b/index.html
@@ -35,11 +35,15 @@
   <div class="popup popup_type_profile">
     <div class="popup__container">
       <h3 class="popup__header">Редактировать профиль</h3>
-      <form name="profile-form" class="popup__form">
+      <form name="profile-form" class="popup__form" novalidate>
         <fieldset class="popup__form-container">
-          <input type="text" class="popup__input popup__input_type_name" placeholder="Имя" name="name">
-          <input type="text" class="popup__input popup__input_type_description" placeholder="О себе" name="about">
-          <button type="submit" class="popup__submit-button popup__submit-button_disabled">Сохранить</button>
+          <input type="text" id="name-input" class="popup__input popup__input_type_name" placeholder="Имя" name="name"
+            required minlength="2" maxlength="40" autocomplete="off">
+          <span class="popup__input-error name-input-error"></span>
+          <input type="text" id="about-input" class="popup__input popup__input_type_description" placeholder="О себе"
+            name="about" required minlength="2" maxlength="200" autocomplete="off">
+          <span class="popup__input-error about-input-error"></span>
+          <button type="submit" class="popup__submit-button">Сохранить</button>
         </fieldset>
       </form>
       <button type="button" class="popup__close-button" aria-label="Кнопка закрытия попапа"></button>
@@ -48,12 +52,14 @@
   <div class="popup popup_type_new-photo">
     <div class="popup__container">
       <h3 class="popup__header">Новое место</h3>
-      <form name="card-form" class="popup__form popup__form_type_new-photo">
+      <form name="card-form" class="popup__form popup__form_type_new-photo" novalidate>
         <fieldset class="popup__form-container">
-          <input type="text" class="popup__input popup__input_type_photo-title" placeholder="Название"
-            name="photo-title">
-          <input type="text" class="popup__input popup__input_type_photo-href" placeholder="Ссылка на картинку"
-            name="photo-href">
+          <input type="text" id="title-input" class="popup__input popup__input_type_photo-title" placeholder="Название"
+            name="photo-title" required minlength="2" maxlength="30" autocomplete="off">
+          <span class="popup__input-error title-input-error"></span>
+          <input type="url" id="href-input" class="popup__input popup__input_type_photo-href"
+            placeholder="Ссылка на картинку" name="photo-href" required autocomplete="off">
+          <span class="popup__input-error href-input-error"></span>
           <button type="submit" class="popup__submit-button">Сохранить</button>
         </fieldset>
       </form>
