fix: fix disabled button state

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
           <input type="url" id="href-input" class="popup__input popup__input_type_photo-href"
             placeholder="Ссылка на картинку" name="photo-href" required autocomplete="off">
           <span class="popup__input-error href-input-error"></span>
-          <button type="submit" class="popup__submit-button">Сохранить</button>
+          <button type="submit" class="popup__submit-button popup__submit-button_disabled" disabled>Сохранить</button>
         </fieldset>
       </form>
       <button type="button" class="popup__close-button" aria-label="Кнопка закрытия попапа"></button>
