--- a/index.html
+++ b/index.html
@@ -83,8 +83,7 @@
       </div>
     </li>
   </template>
-  <script src="./scripts/constants.js" defer></script>
-  <script src="./scripts/index.js" defer></script>
+  <script type="module" src="./scripts/index.js" defer></script>
   <script src="./scripts/validate.js" defer></script>
 </body>
 
